tests/src/frontend/typechecking/invalid/early_return3.sk
const X: Int = return 0;
